# nextora_pos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN-nextora.md  Makefile  PROJECT_CONTEXT.md  PROJECT_RULES.md  README.md  dashboard.html  docker-compose.prod.yml  docker-compose.yml  download_brand_icons.py  fix.py  fix2.py  generate_missing_svgs.js  generate_svgs.js  generate_svgs_local.js  manage.py  migrate_icons.py  package-lock.json  package.json  project_analysis.md  pyproject.toml  rewrite.py  tailwind.config.js  test_icons.py  test_other_icons.py  test_tenant.py  test_upgrade_view.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  logging.py  prod.py  security.py
deploy/docker/: Dockerfile  entrypoint.sh
deploy/gunicorn/: gunicorn.conf.py
deploy/nginx/: default.conf  nginx.conf
deploy/scripts/: backup_full.sh  restore_full.sh
design-system/tokens/: NAMING.md  tailwind.config.js  tokens.css
docs/: api_specification.md  business_workflows.md  postgresql_schema_review.md  walkthrough.md
docs/adr/: ADR-0001-enterprise-inventory-architecture.md  ADR-0002-customer-domain-architecture.md  ADR-0003-billing-engine-architecture-review.md  ADR-0003-billing-engine-architecture.md
docs/design-system/: component-inventory.md  layout-architecture.md
requirements/: base.txt  dev.txt  prod.txt
src/shared/: apps.py  models.py  tasks.py
static/: manifest.json  sw.js
static/css/: main.css  tailwind.css  tokens.css
templates/: base.html  offline.html  styleguide.html
templates/_chrome/: module_rail.html  page_footer.html  status_rail.html  top_rail.html
templates/billing/: billing.html  restricted.html  upgrade.html
templates/catalog/: category_list.html  combo_form.html  combo_list.html  modifier_analytics.html  modifier_group_form.html  modifier_group_list.html  modifier_option_form.html  modifier_options_manage.html  product_form.html  product_list.html
tests/: conftest.py
(+825 files in other folders)
